--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.6.0",
     "immer": "^10.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,6 +21,7 @@
     "react-router-dom": "^6.18.0",
     "sass": "^1.69.5",
     "socket.io-client": "^4.7.2",
+    "sweetalert2": "^11.10.1",
     "tsparticles": "^2.12.0",
     "zustand": "^4.4.6"
   },
