--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sass": "^1.69.5",
     "socket.io-client": "^4.7.2",
     "sweetalert2": "^11.10.1",
+    "swiper": "^11.0.5",
     "tsparticles": "^2.12.0",
     "zustand": "^4.4.6"
   },
